...
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button_addThumbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1_button_start_processing"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/button_stopProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
...
